Fix spacing in git diff output.

--- a/resources/scss/components/status-card.scss
+++ b/resources/scss/components/status-card.scss
@@ -1,15 +1,21 @@
-.status-card {
+.status-card-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  gap: 1rem;
-  width: min-content;
-  background-color: var(--background-color-one);
-  border: 1px solid var(--border-color);
-  border-radius: 0.5rem;
-  padding: 1rem;
-  width: fit-content;
-  max-width: 33%;
-  min-width: 20rem !important;
+  height: fit-content;
+
+  .status-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: min-content;
+    background-color: var(--background-color-one);
+    border: 1px solid var(--border-color);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    width: fit-content;
+    max-width: 33%;
+    min-width: 20rem !important;
+  }
 }
